# SGSAT-KT

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  train.sh
.claude/: CLAUDE.md  PROJECT_RULES.md
.claude/skills/: project-organization-rules.md
DTransformer/: __init__.py  data.py  embedding_loader.py  graph.py  grounding.py  layers.py  model.py  precomputed.py  preprocess.py  preprocess_data.py  visualize.py
baselines/: AKT.py  DKT.py  SAKT.py  __init__.py  dtransformer.py
configs/: default.yaml  experiments.yaml  optimized_config.toml
docs/: CONFIG.md  PRECOMPUTED_EMBEDDINGS_GUIDE.md  SATKT：基于Transformer的稀疏注意力知识追踪模型.docx  TRAINING.md  TriSG-KT_journal_manuscript.md  TriSG-KT_图表与消融草案.md  TriSG-KT_论文初稿.md  baseline_summary.txt  终稿-提交0612.docx
scripts/: 1_precompute.py  1_precompute.sh  2_train.py  2_train.sh  README.md  check_project_structure.sh  configs.py  train.sh
scripts/utils/: config_loader.py  process_xes.py  verify_modifications.py
scripts/visualization/: plot_attn.py  plot_tracing.py  v_tracing.py
utils/: __init__.py  config.py  data_pipeline.py  embedding_artifacts.py  experiment.py  kt_dataset.py  logger.py  metrics.py  precompute.py  preprocessing.py  project.py  training.py
